# sudoku_solver

./: CMakeLists.txt  README.md  rebuild.cmd  rebuild.sh
srcsolver/: CMakeLists.txt  auto_demo.h  branchless_no_indexes.h  brute_force.h  bs2_onethread.h  bs3_onethread.h  bs3_threads_atomics.h  bs4_onethread.h  bs_onethread.h  classes_to_test.h  generated_indexes.cpp  generated_indexes.h  last_try_tomakefaster.h  multithreaded_solve.h  no_separate_options.h  no_separate_options_demo.h  report_generator.cpp  report_generator.h  simple_solver.cpp  solver.cpp  stdafx.h  sudoku_test_data.cpp  sudoku_test_data.h  sv_guessescache.cpp  sv_guessescache.h  sv_sfield.cpp  sv_sfield.h  sv_types.h  test_sudoku.txt  timemeasurer.cpp  types.h
